<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <android.support.v7.widget.AppCompatEditText
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/editLogin"
        android:hint="@string/edit_hint_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <android.support.v7.widget.AppCompatEditText
        android:inputType="textPassword"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/editPass"
        android:hint="@string/edit_hint_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <android.support.v7.widget.AppCompatButton
        android:text="@string/btn_text_ok"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>