<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <LinearLayout
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:id="@+id/ivAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp" />

    </LinearLayout>

    <TextView
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textSize="18sp"
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <LinearLayout
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:weightSum="100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="start"
            android:layout_weight="50"
            android:text="@string/label_public_repo"
            android:id="@+id/tvLabelPublicRepo"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


        <TextView
            android:gravity="end"
            android:layout_weight="50"
            android:id="@+id/tvPublicRepo"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:text="@string/btn_repositories"
        android:id="@+id/btnRepositories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



   <android.support.v7.widget.AppCompatButton
       android:text="@string/buttion_text_log_out"
       android:id="@+id/btnLogOut"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>


</LinearLayout>